# ------------------------------------------------------
# THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
# ------------------------------------------------------

type Transaction {
  id: Int!
  blockNumber: String!
  blockHash: String!
  hash: String!
  type: Int!
  to: String!
  from: String!
  nonce: String!
  gasLimit: String!
  gasPrice: String!
  maxPriorityFeePerGas: String!
  maxFeePerGas: String!
  data: String!
  value: String!
  chainId: String!
  r: String!
  s: String!
  yParity: Int!
  createdAt: DateTime!
  contract: Contract!
  eventLogs: [EventLog!]
}

"""
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
"""
scalar DateTime

type EventParameter {
  id: Int!
  name: String!
  type: String!
  value: String!
  createdAt: DateTime!
  eventLog: EventLog!
}

type EventLog {
  id: Int!
  blockNumber: Int!
  logIndex: Int!
  createdAt: DateTime!
  event: Event!
  transaction: Transaction!
  eventParameters: [EventParameter!]
}

type Event {
  id: Int!
  name: String!
  signature: String!
  createdAt: DateTime!
  contract: Contract!
  eventLogs: [EventLog!]
}

type Contract {
  id: Int!
  address: String!
  name: String
  abi: String
  createdAt: DateTime!
  events: [Event!]
  transactions: [Transaction!]
}

type Query {
  eventLogs: [EventLog!]!
  eventLog(id: Int!): EventLog!
}